--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -3,11 +3,20 @@ Eval:
     - "Rakefile"
     - "**/version.rb"
 
-Metrics/AbcSize:
+Layout/EmptyLinesAroundBlockBody:
   Enabled: false
 
-Metrics/LineLength:
+Layout/EmptyLinesAroundClassBody:
+  EnforcedStyle: empty_lines
+
+Layout/EmptyLinesAroundModuleBody:
+  Enabled: false
+
+Layout/LineLength:
   Max: 120
+
+Metrics/AbcSize:
+  Enabled: false
 
 Metrics/MethodLength:
   Max: 30
@@ -21,20 +30,7 @@ Style/Documentation:
   Exclude:
     - "spec/**/*"
 
-Style/EmptyLinesAroundBlockBody:
-  Enabled: false
-
-Style/EmptyLinesAroundClassBody:
-  EnforcedStyle: empty_lines
-
-Style/EmptyLinesAroundModuleBody:
-  Enabled: false
-
-Style/Encoding:
-  EnforcedStyle: when_needed
-  Enabled: true
-
-Style/FileName:
+Naming/FileName:
   Exclude:
     - "bin/*"
 
